src/sass/_navbar.scss
// Deprecated
#global-navbar {
  .navbar-brand {
    font-size: 1em;

    img {
      height: 2em;
      width: auto;
      margin: 0;
    }
  }
}

// Compact navbar to show all openSUSE sites
.cross-site-navbar {
  $height: 1.5rem;
  display: flex;
  height: $height;
  font-size: $font-size-sm;
  background: $black;
  color: $gray-500;

  > .sites {
    display: flex;
    flex: 1 1 auto;

    .menu {
      display: flex;
      flex: 0 1 auto;
      flex-wrap: wrap;
      overflow: hidden;
    }

    .dropdown {
      flex: 0 0 auto;
    }
  }

  a {
    display: block;
    padding: 0 8px;
    height: $height;
    line-height: $height;
    color: inherit;
    white-space: nowrap;

    &:hover, &.active {
      background: $primary;
      text-decoration: none;
      color: $white;
    }
  }

  .dropdown-menu {
    border: 0;
    background: $black;
    color: $gray-500;
    margin-top: 0;

    .dropdown-header {
      padding: 0.5rem 1rem;
      text-transform: uppercase;
    }
  }

  > .actions {
    flex: 0 1 auto;
    display: flex;
    height: $height;
    align-items: center;

    > * {
      margin-right: 15px;
      line-height: $height;
      white-space: nowrap;
    }

    @media (max-width: 400px) {
      label {
        width: 0;
        color: transparent;
      }
    }
  }
}

// Per site navbar, shows navigations inside site
.navbar {
  $image-height: 32px;

  img {
    height: $image-height;
    width: auto;
    margin-top: -$navbar-padding-y;
    margin-bottom: -$navbar-padding-y;

  }

  .navbar-brand {
    display: flex;
    align-items: center;
    background: $green;
    color: $white;
    user-select: none;
    margin-left: -$navbar-padding-x;
    margin-top: -$navbar-padding-y;
    margin-bottom: -$navbar-padding-y;
    padding-left: $navbar-padding-x;
    padding-right: $navbar-padding-x;
    align-self: stretch;

    &:hover, &:focus {
      color: $white;
    }
  }

  form {
    margin: 0;
    align-self: stretch;
  }
}

